--- a/docs/csharp/language-reference/compiler-messages/cs0592.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0592.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS0592
 ms.assetid: 805c8cf0-eca2-4040-badd-a9c09ab5c747
-ms.openlocfilehash: d5d9aefc4fd7f7d8d614670f92a1ffe377b2c97e
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 248b26331a7d8fcd54955e4e3bd49fbc373fb007
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43512873"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54543684"
 ---
 # <a name="compiler-error-cs0592"></a>컴파일러 오류 CS0592
 
@@ -19,7 +19,7 @@ ms.locfileid: "43512873"
   
  특성을 정의할 때 `AttributeTargets` 값을 지정하여 적용할 수 있는 구조체를 정의합니다. 다음 예제에서는 `AttributeUsage` 특성이 `AttributeTargets.Interface`를 지정하기 때문에 `MyAttribute` 특성을 인터페이스에만 적용할 수 있습니다. 특성이 클래스(`A` 클래스)에 적용되기 때문에 오류가 생성됩니다.  
   
-## <a name="example"></a>예
+## <a name="example"></a>예제
 
  다음 샘플에서는 CS0592를 생성합니다.  
 
