--- a/docs/csharp/language-reference/compiler-messages/cs1061.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1061.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS1061
 ms.assetid: 10ba0509-d541-43da-acf5-eaa7987e41d4
-ms.openlocfilehash: ae873c4552c1e6428eef97f4eecc06a101aba6f2
-ms.sourcegitcommit: 3c1c3ba79895335ff3737934e39372555ca7d6d0
+ms.openlocfilehash: af6c7f71fe326b338b05980f4baf327a3f05ed70
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "43798663"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54660699"
 ---
 # <a name="compiler-error-cs1061"></a>컴파일러 오류 CS1061
 'type'에 'member'에 대한 정의가 없고 'type' 형식의 첫 번째 인수를 허용하는 확장 메서드 'name'을(를) 찾을 수 없습니다. using 지시문 또는 어셈블리 참조가 있는지 확인하세요.  
   
  메서드를 호출하거나 존재하지 않는 클래스 멤버에 액세스하려고 하면 이 오류가 발생합니다.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예제  
  다음 예제에서는 `TestClass1`에 `DisplaySomething` 메서드가 없기 때문에 CS1061을 생성합니다. `WriteSomething`이라는 메서드가 있습니다. 이 소스 코드의 작성자가 쓰려고 한 내용입니다.  
   
 ```csharp  
@@ -59,7 +59,7 @@ public class TestTheClasses
 }  
 ```  
   
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
-- [클래스 및 구조체](../../../csharp/programming-guide/classes-and-structs/index.md)  
+- [클래스 및 구조체](../../../csharp/programming-guide/classes-and-structs/index.md)
 - [확장명 메서드](../../../csharp/programming-guide/classes-and-structs/extension-methods.md)
