--- a/docs/csharp/language-reference/compiler-messages/cs0108.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0108.md
@@ -6,20 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS0108
 ms.assetid: 04330ed2-80d5-4bf2-b0c1-a0c2bec03074
-ms.openlocfilehash: 4b38b5270764d53a81a0302229d538828c5aa924
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 5f8f6f6d39da57914173f621b452e83f5f6574d9
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43512100"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54633824"
 ---
-# <a name="compiler-warning-level-2-cs0108"></a><span data-ttu-id="5ba6f-102">컴파일러 경고(수준 2) CS0108</span><span class="sxs-lookup"><span data-stu-id="5ba6f-102">Compiler Warning (level 2) CS0108</span></span>
+# <a name="compiler-warning-level-2-cs0108"></a><span data-ttu-id="aced8-102">컴파일러 경고(수준 2) CS0108</span><span class="sxs-lookup"><span data-stu-id="aced8-102">Compiler Warning (level 2) CS0108</span></span>
 
-<span data-ttu-id="5ba6f-103">‘member1’은(는) 상속된 ‘member2’ 멤버를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="5ba6f-103">'member1' hides inherited member 'member2'.</span></span> <span data-ttu-id="5ba6f-104">숨기려면 new 키워드를 사용하세요.</span><span class="sxs-lookup"><span data-stu-id="5ba6f-104">Use the new keyword if hiding was intended.</span></span>  
+<span data-ttu-id="aced8-103">‘member1’은(는) 상속된 ‘member2’ 멤버를 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="aced8-103">'member1' hides inherited member 'member2'.</span></span> <span data-ttu-id="aced8-104">숨기려면 new 키워드를 사용하세요.</span><span class="sxs-lookup"><span data-stu-id="aced8-104">Use the new keyword if hiding was intended.</span></span>  
   
- <span data-ttu-id="5ba6f-105">기본 클래스의 변수와 동일한 이름을 사용하여 변수가 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="5ba6f-105">A variable was declared with the same name as a variable in a base class.</span></span> <span data-ttu-id="5ba6f-106">그러나 [new](../../../csharp/language-reference/keywords/new.md) 키워드가 사용되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="5ba6f-106">However, the [new](../../../csharp/language-reference/keywords/new.md) keyword was not used.</span></span> <span data-ttu-id="5ba6f-107">이 경고는 **new**를 사용해야 한다고 알립니다. 선언에 **new**를 사용한 것처럼 변수가 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="5ba6f-107">This warning informs you that you should use **new**; the variable is declared as if **new** had been used in the declaration.</span></span>  
+ <span data-ttu-id="aced8-105">기본 클래스의 변수와 동일한 이름을 사용하여 변수가 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="aced8-105">A variable was declared with the same name as a variable in a base class.</span></span> <span data-ttu-id="aced8-106">그러나 [new](../../../csharp/language-reference/keywords/new.md) 키워드가 사용되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="aced8-106">However, the [new](../../../csharp/language-reference/keywords/new.md) keyword was not used.</span></span> <span data-ttu-id="aced8-107">이 경고는 **new**를 사용해야 한다고 알립니다. 선언에 **new**를 사용한 것처럼 변수가 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="aced8-107">This warning informs you that you should use **new**; the variable is declared as if **new** had been used in the declaration.</span></span>  
   
- <span data-ttu-id="5ba6f-108">다음 샘플에서는 CS0108을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="5ba6f-108">The following sample generates CS0108:</span></span>  
+ <span data-ttu-id="aced8-108">다음 샘플에서는 CS0108을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="aced8-108">The following sample generates CS0108:</span></span>  
 
 ```csharp
 // CS0108.cs  
@@ -47,7 +47,7 @@ namespace x
 }  
 ```
 
-## <a name="see-also"></a><span data-ttu-id="5ba6f-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="5ba6f-109">See Also</span></span>
+## <a name="see-also"></a><span data-ttu-id="aced8-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="aced8-109">See also</span></span>
 
-- [<span data-ttu-id="5ba6f-110">new 한정자</span><span class="sxs-lookup"><span data-stu-id="5ba6f-110">new Modifier</span></span>](../../../csharp/language-reference/keywords/new-modifier.md)  
-- [<span data-ttu-id="5ba6f-111">new</span><span class="sxs-lookup"><span data-stu-id="5ba6f-111">new</span></span>](../../../csharp/language-reference/keywords/new.md)
+- [<span data-ttu-id="aced8-110">new 한정자</span><span class="sxs-lookup"><span data-stu-id="aced8-110">new Modifier</span></span>](../../../csharp/language-reference/keywords/new-modifier.md)
+- [<span data-ttu-id="aced8-111">new</span><span class="sxs-lookup"><span data-stu-id="aced8-111">new</span></span>](../../../csharp/language-reference/keywords/new.md)
