--- a/docs/csharp/language-reference/compiler-messages/cs0592.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0592.md
@@ -6,22 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS0592
 ms.assetid: 805c8cf0-eca2-4040-badd-a9c09ab5c747
-ms.openlocfilehash: d5d9aefc4fd7f7d8d614670f92a1ffe377b2c97e
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 248b26331a7d8fcd54955e4e3bd49fbc373fb007
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43512873"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54543684"
 ---
-# <a name="compiler-error-cs0592"></a><span data-ttu-id="6469f-102">컴파일러 오류 CS0592</span><span class="sxs-lookup"><span data-stu-id="6469f-102">Compiler Error CS0592</span></span>
+# <a name="compiler-error-cs0592"></a><span data-ttu-id="9f03f-102">컴파일러 오류 CS0592</span><span class="sxs-lookup"><span data-stu-id="9f03f-102">Compiler Error CS0592</span></span>
 
-<span data-ttu-id="6469f-103">이 선언 형식에서는 ‘attribute’ 특성이 유효하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="6469f-103">Attribute 'attribute' is not valid on this declaration type.</span></span> <span data-ttu-id="6469f-104">이 특성은 ‘type’ 선언에서만 유효합니다.</span><span class="sxs-lookup"><span data-stu-id="6469f-104">It is valid on 'type' declarations only.</span></span>  
+<span data-ttu-id="9f03f-103">이 선언 형식에서는 ‘attribute’ 특성이 유효하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="9f03f-103">Attribute 'attribute' is not valid on this declaration type.</span></span> <span data-ttu-id="9f03f-104">이 특성은 ‘type’ 선언에서만 유효합니다.</span><span class="sxs-lookup"><span data-stu-id="9f03f-104">It is valid on 'type' declarations only.</span></span>  
   
- <span data-ttu-id="6469f-105">특성을 정의할 때 `AttributeTargets` 값을 지정하여 적용할 수 있는 구조체를 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="6469f-105">When you define an attribute, you define what constructs it can be applied to by specifying an `AttributeTargets` value.</span></span> <span data-ttu-id="6469f-106">다음 예제에서는 `AttributeUsage` 특성이 `AttributeTargets.Interface`를 지정하기 때문에 `MyAttribute` 특성을 인터페이스에만 적용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6469f-106">In the following example, the `MyAttribute` attribute can be applied to interfaces only, because the `AttributeUsage` attribute specifies `AttributeTargets.Interface`.</span></span> <span data-ttu-id="6469f-107">특성이 클래스(`A` 클래스)에 적용되기 때문에 오류가 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="6469f-107">The error is generated because the attribute is applied to a class (class `A`).</span></span>  
+ <span data-ttu-id="9f03f-105">특성을 정의할 때 `AttributeTargets` 값을 지정하여 적용할 수 있는 구조체를 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="9f03f-105">When you define an attribute, you define what constructs it can be applied to by specifying an `AttributeTargets` value.</span></span> <span data-ttu-id="9f03f-106">다음 예제에서는 `AttributeUsage` 특성이 `AttributeTargets.Interface`를 지정하기 때문에 `MyAttribute` 특성을 인터페이스에만 적용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9f03f-106">In the following example, the `MyAttribute` attribute can be applied to interfaces only, because the `AttributeUsage` attribute specifies `AttributeTargets.Interface`.</span></span> <span data-ttu-id="9f03f-107">특성이 클래스(`A` 클래스)에 적용되기 때문에 오류가 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="9f03f-107">The error is generated because the attribute is applied to a class (class `A`).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="6469f-108">예</span><span class="sxs-lookup"><span data-stu-id="6469f-108">Example</span></span>
+## <a name="example"></a><span data-ttu-id="9f03f-108">예제</span><span class="sxs-lookup"><span data-stu-id="9f03f-108">Example</span></span>
 
- <span data-ttu-id="6469f-109">다음 샘플에서는 CS0592를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="6469f-109">The following sample generates CS0592:</span></span>  
+ <span data-ttu-id="9f03f-109">다음 샘플에서는 CS0592를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="9f03f-109">The following sample generates CS0592:</span></span>  
 
 ```csharp
 // CS0592.cs  
@@ -42,6 +42,6 @@ public class A
 }  
 ```
 
-## <a name="see-also"></a><span data-ttu-id="6469f-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="6469f-110">See Also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9f03f-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9f03f-110">See also</span></span>
 
-- [<span data-ttu-id="6469f-111">특성</span><span class="sxs-lookup"><span data-stu-id="6469f-111">Attributes</span></span>](../../../csharp/programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="9f03f-111">특성</span><span class="sxs-lookup"><span data-stu-id="9f03f-111">Attributes</span></span>](../../../csharp/programming-guide/concepts/attributes/index.md)
