--- a/docs/csharp/language-reference/compiler-messages/cs1942.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1942.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1942
 ms.assetid: afbe5e8e-1944-416e-916b-39e2c373814b
-ms.openlocfilehash: 7a5b4ab5d5b319c51e96d13e59de47446f406e66
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 500d9ee7c1137910801d0147b4170434d2f0ca66
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43516524"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54693479"
 ---
 # <a name="compiler-error-cs1942"></a>컴파일러 오류 CS1942
 
@@ -23,7 +23,7 @@ ms.locfileid: "43516524"
 
 1. 범위 변수가 명시적으로 형식화된 경우, 해당 형식이 반복 컬렉션 요소의 형식과 동일하거나 이 형식으로부터 암시적으로 변환 가능하도록 합니다. 범위 변수 앞에 `var` 키워드가 있는 경우 `var`를 제거합니다.  
   
-## <a name="example"></a>예
+## <a name="example"></a>예제
 
 다음 코드에서는 CS1942 오류가 발생합니다.  
 
@@ -41,7 +41,7 @@ class Program
 
 CS1942는 CS1949와 관련이 있습니다. 범위 변수와 `var`를 함께 사용하면 `var`가 형식이 아니므로 기본 `Cast<T>` 작업이 실패하기 때문입니다.  
   
-## <a name="see-also"></a>참고 항목  
+## <a name="see-also"></a>참고 항목
 
-- [var](../../../csharp/language-reference/keywords/var.md)  
+- [var](../../../csharp/language-reference/keywords/var.md)
 - [LINQ 쿼리 식](../../../csharp/programming-guide/linq-query-expressions/index.md)
