--- a/docs/csharp/language-reference/compiler-messages/cs1942.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1942.md
@@ -6,26 +6,26 @@ f1_keywords:
 helpviewer_keywords:
 - CS1942
 ms.assetid: afbe5e8e-1944-416e-916b-39e2c373814b
-ms.openlocfilehash: 7a5b4ab5d5b319c51e96d13e59de47446f406e66
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 500d9ee7c1137910801d0147b4170434d2f0ca66
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43516524"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54693479"
 ---
-# <a name="compiler-error-cs1942"></a><span data-ttu-id="b752c-102">컴파일러 오류 CS1942</span><span class="sxs-lookup"><span data-stu-id="b752c-102">Compiler Error CS1942</span></span>
+# <a name="compiler-error-cs1942"></a><span data-ttu-id="da9a2-102">컴파일러 오류 CS1942</span><span class="sxs-lookup"><span data-stu-id="da9a2-102">Compiler Error CS1942</span></span>
 
-<span data-ttu-id="b752c-103">‘clause’ 절에 있는 식의 형식이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="b752c-103">The type of the expression in the 'clause' clause is incorrect.</span></span> <span data-ttu-id="b752c-104">‘method’ 호출 시 형식을 유추하지 못했습니다.</span><span class="sxs-lookup"><span data-stu-id="b752c-104">Type inference failed in the call to 'method'.</span></span>  
+<span data-ttu-id="da9a2-103">‘clause’ 절에 있는 식의 형식이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="da9a2-103">The type of the expression in the 'clause' clause is incorrect.</span></span> <span data-ttu-id="da9a2-104">‘method’ 호출 시 형식을 유추하지 못했습니다.</span><span class="sxs-lookup"><span data-stu-id="da9a2-104">Type inference failed in the call to 'method'.</span></span>  
   
-<span data-ttu-id="b752c-105">이 오류는 일반적으로 범위 변수에 잘못된 명시적 형식을 지정하는 경우에 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="b752c-105">This error is typically generated when the range variable has been given an incorrect explicit type.</span></span>  
+<span data-ttu-id="da9a2-105">이 오류는 일반적으로 범위 변수에 잘못된 명시적 형식을 지정하는 경우에 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="da9a2-105">This error is typically generated when the range variable has been given an incorrect explicit type.</span></span>  
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="b752c-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b752c-106">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="da9a2-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="da9a2-106">To correct this error</span></span>
 
-1. <span data-ttu-id="b752c-107">범위 변수가 명시적으로 형식화된 경우, 해당 형식이 반복 컬렉션 요소의 형식과 동일하거나 이 형식으로부터 암시적으로 변환 가능하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="b752c-107">If the range variable is explicitly typed, make sure that the type is either the same as, or implicitly convertible from, the type of the elements in the collection it iterates.</span></span> <span data-ttu-id="b752c-108">범위 변수 앞에 `var` 키워드가 있는 경우 `var`를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="b752c-108">If the range variable is preceded with the `var` keyword, remove `var`.</span></span>  
+1. <span data-ttu-id="da9a2-107">범위 변수가 명시적으로 형식화된 경우, 해당 형식이 반복 컬렉션 요소의 형식과 동일하거나 이 형식으로부터 암시적으로 변환 가능하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="da9a2-107">If the range variable is explicitly typed, make sure that the type is either the same as, or implicitly convertible from, the type of the elements in the collection it iterates.</span></span> <span data-ttu-id="da9a2-108">범위 변수 앞에 `var` 키워드가 있는 경우 `var`를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="da9a2-108">If the range variable is preceded with the `var` keyword, remove `var`.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="b752c-109">예</span><span class="sxs-lookup"><span data-stu-id="b752c-109">Example</span></span>
+## <a name="example"></a><span data-ttu-id="da9a2-109">예제</span><span class="sxs-lookup"><span data-stu-id="da9a2-109">Example</span></span>
 
-<span data-ttu-id="b752c-110">다음 코드에서는 CS1942 오류가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="b752c-110">The following code generates CS1942:</span></span>  
+<span data-ttu-id="da9a2-110">다음 코드에서는 CS1942 오류가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="da9a2-110">The following code generates CS1942:</span></span>  
 
 ```csharp
 // cs1942.cs  
@@ -39,9 +39,9 @@ class Program
     }  
 ```
 
-<span data-ttu-id="b752c-111">CS1942는 CS1949와 관련이 있습니다. 범위 변수와 `var`를 함께 사용하면 `var`가 형식이 아니므로 기본 `Cast<T>` 작업이 실패하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="b752c-111">CS1942 is related to CS1949 because the use of `var` with a range variable causes the underlying `Cast<T>` operation to fail because `var` is not a type.</span></span>  
+<span data-ttu-id="da9a2-111">CS1942는 CS1949와 관련이 있습니다. 범위 변수와 `var`를 함께 사용하면 `var`가 형식이 아니므로 기본 `Cast<T>` 작업이 실패하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="da9a2-111">CS1942 is related to CS1949 because the use of `var` with a range variable causes the underlying `Cast<T>` operation to fail because `var` is not a type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b752c-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b752c-112">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="da9a2-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="da9a2-112">See also</span></span>
 
-- [<span data-ttu-id="b752c-113">var</span><span class="sxs-lookup"><span data-stu-id="b752c-113">var</span></span>](../../../csharp/language-reference/keywords/var.md)  
-- [<span data-ttu-id="b752c-114">LINQ 쿼리 식</span><span class="sxs-lookup"><span data-stu-id="b752c-114">LINQ Query Expressions</span></span>](../../../csharp/programming-guide/linq-query-expressions/index.md)
+- [<span data-ttu-id="da9a2-113">var</span><span class="sxs-lookup"><span data-stu-id="da9a2-113">var</span></span>](../../../csharp/language-reference/keywords/var.md)
+- [<span data-ttu-id="da9a2-114">LINQ 쿼리 식</span><span class="sxs-lookup"><span data-stu-id="da9a2-114">LINQ Query Expressions</span></span>](../../../csharp/programming-guide/linq-query-expressions/index.md)
