--- a/docs/visual-basic/misc/bc31025.md
+++ b/docs/visual-basic/misc/bc31025.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31025
 ms.assetid: 0ed0efdb-f901-4773-b258-5a6459bd36e0
-ms.openlocfilehash: a73af3aa94ee783142442751c2d004bfaad4efd9
-ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
+ms.openlocfilehash: 328f602c68113bd6300aabf6c0cb439e17e491d5
+ms.sourcegitcommit: 01ea420eaa4bf76d5fc47673294c8881379b3369
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55271345"
+ms.lasthandoff: 02/06/2019
+ms.locfileid: "55758263"
 ---
 # <a name="unable-to-open-key-file-filename-error"></a>키 파일을 열 수 없습니다. '\<파일 이름 >': \<오류 >
 이 프로젝트에 대해 지정된 키 파일을 열 수 없습니다.  
@@ -24,5 +24,5 @@ ms.locfileid: "55271345"
 -   키 파일이 있고, 다른 애플리케이션에 의해 잠기지 않았는지 확인합니다.  
   
 ## <a name="see-also"></a>참고자료
-- [Sn.exe (강력한 이름 도구)] [Sn.exe (강력한 이름 도구)](../../framework/tools/sn-exe-strong-name-tool.md))
+- [Sn.exe (강력한 이름 도구)](../../framework/tools/sn-exe-strong-name-tool.md))
 
